# cost-aware-bo

./: .gitignore  README.md  bo_trials.py  bounds.json  codeformer_bo.yml  codeformer_bo_trials.sh  codeformer_hparams.py  env.yml  functions.py  json_reader.py  logs.json  logs_beale2_hartmann3_beale2_132.csv  logs_branin2_ackley3_hartmann3_132.csv  logs_branin2_hartmann3_rosenbrock2_332.csv  logs_levy2_hartmann3_branin2_332.csv  logs_michale2_hartmann3_branin2_132.csv  main.py  melanoma_bo_trials.sh  melanoma_env.yml  melanoma_hparams.py  modelling.py  optimize_mem_acqf.py  param_gen.py  param_gen_v2.py  params-melanoma.json  params.json  pyproject.toml  requirements.txt  run.sh  run_real_world.sh  run_stacking.sh  single_iteration.py  single_trial.py
EEIPU/: EIPUVariants.py
cost_aware_bo/: __init__.py  build_logs.py  functions.py  optimize_mem_acqf.py  param_gen.py  single_iteration.py
cost_aware_bo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cost_aware_bo/EEIPU/: EIPUVariants.py
hparams/: stage1.json  stage2.json  stage3.json
inputs/: base_model_hp.json  meta_model_hp.json  preproc_hp.json  stage1.json  stage2.json  stage3.json  stage_1.json  stage_2.json
optimizer/: optimize_acqf_funcs.py  optimize_acqf_funcs___.py
segmentation/: cache_storage.py  optimize.py  optimize_aws.py  requirements.txt  run_experiments.sh  sampling-range.json  segmentation_exp.py
stacking/: README.md  data_processing.py  modelling.py  modelling_aws.py  requirements.txt  run_stacking.sh
t5_fine_tuning/: .dockerignore  DockerFile  optimize.py  optimize_multi.py  requirements.txt  run.sh  run_multi.sh  sagemaker_runner.py  t5env.yml  tuning.py  tuning_multi.py  utils.py
t5_fine_tuning_aws/: cache_storage.py  optimize_multi.py  run_multi.sh  tuning.py  tuning_multi.ipynb  tuning_multi.py  utils.py
wandb/: latest-run
(+10325 files in other folders)
